MB-39668: Don't throw exception from Cookie::toJSON

Cookie::toJSON is called from the exception handler
for connections, and if an exception (!= std::bad_alloc)
is thrown it'll tear down the process.

Change-Id: Ia0617d3c16289431acb8084c1375c4a9b5f4affa
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/129587
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Tested-by: Trond Norbye <trond.norbye@couchbase.com>